force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__GroupRequestedById__c.field-meta.xml
<CustomField>
    <fullName>ssot__GroupRequestedById__c</fullName>
    <label>Group Requested By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GroupRequestedById</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>