force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__IsEligibleForTierAssessment__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsEligibleForTierAssessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible For Tier Assessment</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsEligibleForTierAssessment</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>