force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__ReferralCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralCodeText__c</fullName>
    <label>Referral Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>