force-app/main/default/objects/ssot__LoyaltyProgramMember__dlm/fields/ssot__rel_1731659048968_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659048968_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramMember_GroupRequestedB_rel</label>
    <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramMember_GroupRequestedB_rel</relationshipLabel>
    <relationshipName>rel_1731659048968_end</relationshipName>
    <type>Lookup</type>
</CustomField>